# aurabrand

./: .gitignore  README.md  api.py  app.py  benchmark_report.tsv  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  test_app.py
.agents/skills/aurabrand/: SKILL.md
convex/: actions.ts  guidelines.ts  schema.ts  visuals.ts
convex/_generated/: api.d.ts
data/brand_db/: chroma.sqlite3
data/test_brand_db/: chroma.sqlite3
docs/: project_spec.md
docs/benchmarks/: company_faq.json  product_pitch.json
outputs/: verify_full.docx  verify_full.pptx
scripts/: benchmark_suite.py  debug_hang.py  migrate_to_convex.py  verify_upgrade.py
src/: dashboard.py  factory.py  graph.py  mcp_server.py  nodes.py  state.py
src/knowledge/: __init__.py  brand_manager.py
src/skills/: __init__.py  benchmark_parse.py  doc_gen.py  image_gen.py  learn_agent.py  pdf_gen.py  pptx_gen.py  research.py
tests/evals/: eval_brand_compliance.py
tests/integration/: test_graph.py  test_learning.py
tests/unit/: test_factory.py  test_nodes.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
